build: introduce bootstrap playbook and ssh port config
Introduced a new bootstrap playbook for initial server setup and added configuration for custom SSH ports to improve deployment flexibility and security.

- Created `bootstrap.yml` playbook for initial server setup.
- Added a `bootstrap` target to the `Makefile` for executing the bootstrap playbook.
- Updated `README.md` to include instructions for running the bootstrap playbook.
- Renamed `makefiles/deploy.mk` to `Makefile` and integrated deploy logic.
- Modified `provisioning.yml` to target the `sample` host group and use the `server_preparations` role.
- Introduced `roles/bashrc` role for managing `.bashrc` files for admin and root users.
- Renamed `roles/server_general_preparations` to `roles/server_preparations` for clarity.
- Moved user management and SSH configuration tasks to `roles/ssh_and_user_bootstrap`.
- Added `server_ssh_port` variable to `inventories/sample/group_vars/all.yml` for custom SSH port configuration.
- Updated `inventories/sample/inventory` to include `ansible_port` for the `provision-server` host.
- Added `roles/ssh_and_user_bootstrap/templates/authorized_keys.j2` for managing authorized keys.
- Updated `roles/ssh_and_user_bootstrap/templates/sshd_config.j2` to include the `server_ssh_port` variable.
- Removed the old `roles/users` role.

--- a/inventories/sample/group_vars/all.yml
+++ b/inventories/sample/group_vars/all.yml
@@ -12,11 +12,11 @@ root_userpassword: change_this
 lldap_base_dn: "dc=mayurifag,dc=local"
 lldap_observer_user_password: "change_this_observer_password"
 
-# change this
 admin_authorized_keys: ""
 
 server_timezone: Etc/UTC
 server_hostname: mayurifag.local
+server_ssh_port: 2222
 swap_file_size_mb: "1024"
 swap_swappiness: "15"
 
