refactor(provisioning): consolidate bashrc and tmux setup
Consolidated the bashrc configuration and added tmux setup into a new `home_folder` role. This streamlines user environment management and introduces tmux configuration for enhanced productivity.

- Renamed the `bashrc` role to `home_folder`.
- Moved `bashrc` tasks and templates to the new `home_folder` role.
- Added tasks to the `home_folder` role to install and configure Tmux Plugin Manager (TPM).
- Added a new `.tmux.conf.j2` template for tmux configuration.
- Updated `provisioning.yml` to use the `home_folder` role instead of `bashrc`.
- Added `.ansible/` to `.gitignore` and configured VS Code to exclude it.
- Updated README.md with example SSH config changes.

--- a/provisioning.yml
+++ b/provisioning.yml
@@ -17,9 +17,9 @@
         - swap
       when: (swap_enabled | default(False))
 
-    - role: bashrc
+    - role: home_folder
       tags:
-        - bashrc
+        - home_folder
 
     - role: geerlingguy.docker
       tags:
