refactor(bootstrap): streamline initial server setup
This commit refactors the initial server setup process by introducing a new `clean_hosts.yml` playbook and modifying the `bootstrap` target in the Makefile. The goal is to improve the user experience and robustness of the initial server connection and configuration.

- Replaced the `bootstrap.yml` playbook with `clean_hosts.yml` and `sshconfig.yml` for a more modular approach.
- Modified the `bootstrap` target in the Makefile to first run `clean_hosts.yml` to remove old host keys, then guide the user through manual SSH connection and configuration.
- Introduced a new `deploy-all` target in the Makefile for deploying all services without specific tags.
- Updated the README.md to reflect the changes in the bootstrap process and deployment commands.
- Removed the `bootstrap_enabled` variable from `inventories/sample/group_vars/all.yml`.
- Simplified the `inventories/sample/inventory` file to use a single `[sample]` group with variables for user and port.
- Removed the `ntp` package from `roles/server_preparations/defaults/main.yml` and updated timezone/locale tasks to use `systemd-timesyncd`.
- Removed the Hemmelig container definition from `roles/hemmelig/tasks/main.yml` as it's now managed by `sshconfig.yml`.
- Updated Traefik middleware for `mayurifag_github_io` to remove `tinyauth@docker`.
- Created a new `sshconfig.yml` playbook to handle the initial SSH connection and user setup.

--- a/provisioning.yml
+++ b/provisioning.yml
@@ -2,6 +2,7 @@
 - name: Provisioning
   hosts: sample
   gather_facts: yes
+  become: yes
   roles:
     - role: server_preparations
       tags:
@@ -31,16 +32,6 @@
         - lazydocker
       when: (lazydocker_enabled | default(False))
 
-    - role: traefik
-      tags:
-        - traefik
-      when: (traefik_enabled | default(False))
-
-    - role: crowdsec
-      tags:
-        - crowdsec
-      when: (crowdsec_enabled | default(False))
-
     - role: lldap
       tags:
         - lldap
@@ -50,6 +41,16 @@
       tags:
         - tinyauth
       when: (tinyauth_enabled | default(False))
+
+    - role: traefik
+      tags:
+        - traefik
+      when: (traefik_enabled | default(False))
+
+    - role: crowdsec
+      tags:
+        - crowdsec
+      when: (crowdsec_enabled | default(False))
 
     - role: homepage
       tags:
