--- a/roles/mayurifag_github_io/tasks/main.yml
+++ b/roles/mayurifag_github_io/tasks/main.yml
@@ -13,8 +13,7 @@
       traefik.enable: "true"
       traefik.http.routers.mayurifag_github_io.rule: "Host(`{{ server_hostname }}`)"
       traefik.http.services.mayurifag_github_io.loadbalancer.server.port: "80"
-      traefik.http.routers.mayurifag_github_io.middlewares: "secure-headers@file,tinyauth@docker"
-      # traefik.http.routers.mayurifag_github_io.middlewares: "secure-headers@file"
+      traefik.http.routers.mayurifag_github_io.middlewares: "secure-headers@file"
       com.centurylinklabs.watchtower.enable: "true"
 
       homepage.group: "Static"
