--- a/roles/home_folder/tasks/main.yml
+++ b/roles/home_folder/tasks/main.yml
@@ -15,6 +15,11 @@
     group: root
     mode: "0644"
 
+- name: Remove .tmux directory for clean install
+  ansible.builtin.file:
+    path: "/home/{{ admin_username }}/.tmux"
+    state: absent
+
 - name: Ensure .tmux/plugins directory exists
   ansible.builtin.file:
     path: "/home/{{ admin_username }}/.tmux/plugins"
@@ -42,6 +47,3 @@
 - name: Install Tmux Plugins
   ansible.builtin.command: "/home/{{ admin_username }}/.tmux/plugins/tpm/bin/install_plugins"
   become: false
-  changed_when: false
-  environment:
-    TMUX_PLUGIN_MANAGER_PATH: "/home/{{ admin_username }}/.tmux/plugins/"
