chore(config): comment out unused tmux and opencloud settings
Commented out several configuration settings in tmux and opencloud roles that are no longer in use or are being managed elsewhere. This cleans up the configuration files and prevents potential conflicts.

- Commented out `set -g mouse on` in `.tmux.conf.j2` as it's likely managed by a plugin or a different configuration.
- Commented out `set -g @plugin 'noscript/tmux-mighty-scroll'` in `.tmux.conf.j2` as the plugin is no longer needed.
- Commented out `set -g @dracula-theme "dark"` in `.tmux.conf.j2` as the theme is likely set by the Dracula plugin itself.
- Changed `opencloud_files_directory` to `{{ files_home }}/` in `opencloud/defaults/main.yml` to use the root of the files home directory.
- Commented out tasks for removing opencloud container and config directories in `opencloud/tasks/main.yml` as these are no longer required.

--- a/roles/opencloud/tasks/main.yml
+++ b/roles/opencloud/tasks/main.yml
@@ -1,8 +1,16 @@
 ---
+# - name: Remove opencloud container
+#   community.docker.docker_container:
+#     name: opencloud
+#     state: absent
+
 # - name: Remove OpenCloud Config Directory if needed
 #   ansible.builtin.file:
-#     path: "{{ opencloud_data_directory }}"
+#     path: "{{ item }}"
 #     state: absent
+#   with_items:
+#     - "{{ opencloud_data_directory }}"
+#     - "{{ opencloud_files_directory }}"
 
 - name: Create OpenCloud Directories
   ansible.builtin.file:
