--- a/roles/opencloud/defaults/main.yml
+++ b/roles/opencloud/defaults/main.yml
@@ -6,6 +6,6 @@ opencloud_subdomain: "cloud"
 opencloud_image: "opencloudeu/opencloud:4"
 
 opencloud_data_directory: "{{ docker_home }}/opencloud"
-opencloud_files_directory: "{{ files_home }}/OpenCloud"
+opencloud_files_directory: "{{ files_home }}/"
 
 opencloud_log_level: "warn"
