refactor(bookmarks): replace linkwarden with linkding
Replaced the Linkwarden application with Linkding to provide a more streamlined bookmark management experience. This change involves updating documentation, configuration files, and role definitions.

- Renamed 'linkwarden' to 'linkding' across documentation files (POST_INSTALL.md, README.md).
- Updated `all.yml` to reflect the change from `linkwarden_enabled` and `linkwarden_subdomain` to `linkding_enabled` and `linkding_subdomain`.
- Removed the `linkwarden` Ansible role and introduced a new `linkding` Ansible role.
- Added a new `roles/linkding/defaults/main.yml` file for Linkding configuration.
- Added a new `roles/linkding/tasks/main.yml` file to manage the Linkding Docker container.
- Removed the old `roles/linkwarden/defaults/main.yml` and `roles/linkwarden/tasks/main.yml` files.
- Added a task to kill the tmux server in `roles/home_folder/tasks/main.yml`.
- Enabled mouse support in `.tmux.conf.j2` by uncommenting the `set -g mouse on` line.
- Updated `provisioning.yml` to use the `linkding` role instead of `linkwarden`.

--- a/provisioning.yml
+++ b/provisioning.yml
@@ -102,10 +102,10 @@
         - qr
       when: (mini_qr_enabled | default(False))
 
-    - role: linkwarden
+    - role: linkding
       tags:
-        - linkwarden
-      when: (linkwarden_enabled | default(False))
+        - linkding
+      when: (linkding_enabled | default(False))
 
     - role: watchtower
       tags:
