Revert "refactor(roles): remove 3x-ui role and configurations"
This reverts commit 795d919560639dca70f89793146793c0277fd777.

--- a/provisioning.yml
+++ b/provisioning.yml
@@ -67,6 +67,11 @@
         - proxy
       when: (proxy_enabled | default(False))
 
+    - role: threexui
+      tags:
+        - threexui
+      when: (threexui_enabled | default(False))
+
     - role: portainer
       tags:
         - portainer
