feat(monitoring): add glances system monitoring tool
This commit introduces the Glances system monitoring tool, providing comprehensive system information and metrics. It includes configuration for Docker deployment, Traefik integration for access, and Homepage service discovery for seamless integration into the dashboard.

- Added Glances role to provisioning.yml to enable its deployment.
- Created a new role `roles/glances` for managing Glances installation and configuration.
- Defined default variables for Glances in `roles/glances/defaults/main.yml`.
- Implemented tasks for creating necessary directories and configuring Glances in `roles/glances/tasks/main.yml`.
- Configured Glances Docker container with host networking, volume mounts, and Traefik labels for accessibility.
- Integrated Glances with Homepage service discovery, defining widgets for various system metrics.
- Added a Glances configuration template `roles/glances/templates/glances.conf.j2` for password management.
- Updated `roles/homepage/tasks/main.yml` to include `host.docker.internal` in the Homepage Docker container's `/etc/hosts` file, enabling communication with host-networked containers like Glances.
- Added Glances to the Applications List in README.md.
- Included Glances configuration variables in `inventories/sample/group_vars/all.yml`.

--- a/inventories/sample/group_vars/all.yml
+++ b/inventories/sample/group_vars/all.yml
@@ -115,3 +115,7 @@ mini_qr_subdomain: "qr"
 
 linkding_enabled: true
 linkding_subdomain: "bookmarks"
+
+glances_enabled: true
+glances_subdomain: "glances"
+glances_password: "change_this_glances_password"
