--- a/roles/threexui/tasks/main.yml
+++ b/roles/threexui/tasks/main.yml
@@ -1,16 +1,16 @@
 ---
-- name: Stop and remove 3x-ui container if it exists
-  community.docker.docker_container:
-    name: 3x-ui
-    state: absent
-    force_kill: yes
+# - name: Stop and remove 3x-ui container if it exists
+#   community.docker.docker_container:
+#     name: 3x-ui
+#     state: absent
+#     force_kill: yes
 
-- name: Remove 3x-ui Directories
-  ansible.builtin.file:
-    path: "{{ item }}"
-    state: absent
-  with_items:
-    - "{{ threexui_data_directory }}"
+# - name: Remove 3x-ui Directories
+#   ansible.builtin.file:
+#     path: "{{ item }}"
+#     state: absent
+#   with_items:
+#     - "{{ threexui_data_directory }}"
 
 - name: Create 3x-ui Directories
   ansible.builtin.file:
@@ -62,5 +62,5 @@
       homepage.group: "Networking"
       homepage.name: "3x-ui"
       homepage.description: "Also subscriptions on https://{{ threexui_panel_subdomain }}.{{ server_hostname }}/sub/"
-      homepage.icon: "v2ray.png"
+      homepage.icon: "marzban.png"
       homepage.href: "https://{{ threexui_panel_subdomain }}.{{ server_hostname }}"
