feat(proxy): replace 3proxy with dumbproxy
This commit replaces the existing 3proxy implementation with dumbproxy, a more modern and secure HTTPS proxy. This change improves security, adds support for HTTPS proxying, and integrates better with Traefik for TLS termination and routing.

- Replaced the `3proxy` Docker image with `senseunit/dumbproxy`.
- Updated the proxy configuration to use `dumbproxy` specific command-line arguments and environment variables for authentication and binding.
- Introduced a new Traefik configuration file (`traefik_dumbproxy.toml.j2`) for TCP transport configuration.
- Modified the Docker container labels to integrate with Traefik for TLS termination and routing based on the `proxy_subdomain`.
- Added a `dumbproxy.htpasswd` volume mount for user authentication.
- Updated `POST_INSTALL.md` with instructions for configuring dumbproxy in FoxyProxy.
- Updated `README.md` to include `dumbproxy` in the applications list and add it to the work-in-progress list.
- Adjusted `inventories/sample/group_vars/all.yml` to reflect the new `proxy_subdomain` variable and remove unused port variables.
- Updated `roles/proxy/defaults/main.yml` to reflect the new image, subdomain, and memory allocation for dumbproxy.
- Modified `roles/proxy/tasks/main.yml` to create the Traefik configuration for dumbproxy and start the dumbproxy Docker container with appropriate settings.

--- a/inventories/sample/group_vars/all.yml
+++ b/inventories/sample/group_vars/all.yml
@@ -64,10 +64,9 @@ crowdsec_enabled: true
 crowdsec_enroll_key: "change_me"
 
 proxy_enabled: true
-proxy_user: change_this
-proxy_user_password: change_this
-proxy_socks_port: "1080"
-proxy_http_port: "1081"
+proxy_subdomain: "p"
+proxy_user: "change_this"
+proxy_user_password: "change_this"
 
 mus_enabled: true
 mus_subdomain: "mus"
