--- a/roles/proxy/defaults/main.yml
+++ b/roles/proxy/defaults/main.yml
@@ -1,10 +1,10 @@
 ---
 proxy_enabled: true
-proxy_image: ghcr.io/tarampampam/3proxy:latest
+proxy_image: ghcr.io/senseunit/dumbproxy:latest
 
+proxy_subdomain: "p"
 proxy_user: "proxyuser"
 proxy_user_password: "secret"
-proxy_socks_port: "1080"
-proxy_http_port: "1081"
 
-proxy_memory: 1g
+proxy_data_directory: "{{ docker_home }}/dumbproxy"
+proxy_memory: 2g
