feat(provisioning): add tg ai manager role
Adds a new Ansible role for provisioning the TG AI Manager application, enabling its deployment and configuration.

- Creates a new role `tg_ai_manager` for provisioning.
- Adds `tg_ai_manager_enabled` and `tg_ai_manager_subdomain` to `all.yml` for configuration.
- Integrates the `tg_ai_manager` role into `provisioning.yml` with conditional execution.
- Defines default variables for `tg_ai_manager` in `roles/tg_ai_manager/defaults/main.yml`.
- Implements tasks for creating the data directory and deploying the Docker container in `roles/tg_ai_manager/tasks/main.yml`.
- Updates `README.md` to include TG AI Manager in the applications list.

--- a/inventories/sample/group_vars/all.yml
+++ b/inventories/sample/group_vars/all.yml
@@ -114,3 +114,8 @@ mini_qr_subdomain: "qr"
 
 linkding_enabled: true
 linkding_subdomain: "bookmarks"
+
+tg_ai_manager_enabled: true
+tg_ai_manager_subdomain: "tg"
+tg_ai_manager_api_id: "123456"
+tg_ai_manager_api_hash: "abcdef1234567890"
