feat(provisioning): add mkdocs role for documentation hosting
This commit introduces a new role for provisioning MkDocs, enabling users to host their documentation. The changes include adding MkDocs to the application list, defining its configuration variables, and integrating it into the main provisioning playbook.

- Added MkDocs to the README.md applications list.
- Defined mkdocs_enabled, mkdocs_subdomain, and mkdocs_docs_directory in sample/group_vars/all.yml.
- Included the mkdocs role in provisioning.yml with appropriate conditional logic.
- Created new role files for MkDocs: roles/mkdocs/defaults/main.yml, roles/mkdocs/tasks/main.yml, and roles/mkdocs/templates/mkdocs.yml.j2.
- Configured MkDocs to use the Material theme and enabled common markdown extensions and plugins.
- Set up a Docker container for MkDocs with Traefik integration and Watchtower for automatic updates.

--- a/provisioning.yml
+++ b/provisioning.yml
@@ -62,6 +62,11 @@
         - mayurifag_github_io
       when: (mayurifag_github_io_enabled | default(False))
 
+    - role: mkdocs
+      tags:
+        - mkdocs
+      when: (mkdocs_enabled | default(False))
+
     - role: proxy
       tags:
         - proxy
