--- a/inventories/sample/group_vars/all.yml
+++ b/inventories/sample/group_vars/all.yml
@@ -112,6 +112,10 @@ convertx_subdomain: "convert"
 mini_qr_enabled: true
 mini_qr_subdomain: "qr"
 
+mkdocs_enabled: true
+mkdocs_subdomain: "docs"
+mkdocs_docs_directory: "{{ files_home }}/Notes"
+
 tg_ai_manager_enabled: true
 tg_ai_manager_subdomain: "tg"
 tg_ai_manager_api_id: "123456"
