feat(provisioning): add navidrome and opds roles
Introduces new roles for Navidrome and OPDShelf, enabling their deployment and management.

- Adds Navidrome role with default configuration and tasks for Docker container setup.
- Adds OPDShelf role with default configuration and tasks for Docker container setup, including Traefik middleware for upload limits and admin access.
- Integrates Navidrome and OPDShelf into the main provisioning playbook.
- Updates README.md to include Navidrome in the applications list.
- Adds Navidrome and OPDShelf variables to sample group_vars/all.yml.
- Removes a commented-out item from README.md.
- Fixes a missing newline in clean_hosts.yml.
- Fixes missing newlines in iptables_backup.yml, ssh_and_user_bootstrap/handlers/main.yml, ssh_and_user_bootstrap/tasks/main.yml, and tg_ai_manager/tasks/main.yml.

--- a/inventories/sample/group_vars/all.yml
+++ b/inventories/sample/group_vars/all.yml
@@ -72,6 +72,14 @@ mus_enabled: true
 mus_subdomain: "mus"
 mus_music_directory: "/home/{{ admin_username }}/music_folder/"
 
+navidrome_enabled: true
+navidrome_subdomain: "navidrome"
+navidrome_music_directory: "/home/{{ admin_username }}/music_folder/"
+
+opds_enabled: true
+opds_subdomain: "opds"
+opds_books_directory: "{{ files_home }}/Books"
+
 portainer_enabled: true
 portainer_subdomain: "portainer"
 
