chore(deps): update traefik and bentopdf images
Updates the Traefik Docker image to the latest stable version and changes the bentopdf image source.

- Updated traefik_docker_image in roles/traefik/defaults/main.yml from "traefik:v3.6.2" to "traefik:v3.6.7".
- Updated bentopdf_image in roles/bentopdf/defaults/main.yml from "bentopdf/bentopdf-simple:latest" to "ghcr.io/alam00000/bentopdf-simple:latest".
- Removed a commented-out note about Traefik 3.6.4 breaking changes from README.md.

--- a/roles/bentopdf/defaults/main.yml
+++ b/roles/bentopdf/defaults/main.yml
@@ -2,6 +2,6 @@
 bentopdf_enabled: true
 
 bentopdf_subdomain: "pdf"
-bentopdf_image: "bentopdf/bentopdf-simple:latest"
+bentopdf_image: "ghcr.io/alam00000/bentopdf-simple:latest"
 
 bentopdf_memory: "1g"
