chore(ci): update checkout action and python version
Updates the GitHub Actions checkout action to v6 and the Python version in the lint CI workflow. This ensures the workflow uses the latest stable versions of the actions and Python for improved security and compatibility.

- Updated `actions/checkout` from v4 to v6 in `.github/workflows/lint.yml`.
- Updated `python-version` from '3.x' to "3.x" in `.github/workflows/lint.yml`.
- Added a new TODO item to the README.md file.
- Restructured a TODO item in README.md to be more specific.

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -13,7 +13,7 @@ jobs:
   editorconfig:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v6
       - uses: editorconfig-checker/action-editorconfig-checker@main
       - run: editorconfig-checker
 
@@ -21,7 +21,7 @@ jobs:
     name: ansible-lint
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v6
       - name: Run ansible-lint
         uses: ansible/ansible-lint@main
 
@@ -29,12 +29,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.x'
+          python-version: "3.x"
 
       - name: Install yamllint
         run: pip install yamllint
@@ -42,12 +42,11 @@ jobs:
       - name: Run yamllint
         run: yamllint .
 
-
   markdown-lint:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
       - uses: DavidAnson/markdownlint-cli2-action@v16
         with:
-          globs: '**/*.md'
+          globs: "**/*.md"
