fix(navidrome): set long session timeout
Set a very long session timeout for Navidrome to prevent frequent logouts.

- Added ND_SESSIONTIMEOUT: "999999h" to the Navidrome configuration.

--- a/roles/navidrome/tasks/main.yml
+++ b/roles/navidrome/tasks/main.yml
@@ -26,6 +26,7 @@
       ND_LOGLEVEL: "info"
       ND_DATAFOLDER: "/data"
       ND_MUSICFOLDER: "/music"
+      ND_SESSIONTIMEOUT: "999999h"
     networks:
       - name: "web"
     labels:
